# MemoryVisualization

./: LICENSE  README.md  main.py  main2.py  pyproject.toml  srs_interpreter.py  v2.py  visualizer.py
codes/functions/: array_copy.srs  array_copy_no_ret.srs  array_ref.srs  basic_call.srs  basic_with_params.srs  call_with_params.srs  fibo.srs  nested_calls.srs  overflow.srs  recursive.srs  ret_ref.srs  return_values.srs
codes/heap/: clean_alloc.srs  clone_and_drop.srs  dangling_simple.srs  double_free.srs  double_free_bis.srs  heap_variables.srs  memory_leak.srs  mix.srs  reassign_ptr.srs  vec_by_ref.srs  vec_by_ret.srs  vec_by_val.srs  vec_growth.srs  vec_realloc.srs
codes/miscellaneous/: bubble_sort.srs  dicho_search.srs  search_max.srs
codes/stack/: factorial.srs  iterative_fibo.srs  ref_copy_arr.srs  ref_to_ref.srs  references.srs  shadowing.srs  stack_variables.srs  static_array.srs  static_array_alone.srs  tampering.srs
emulator/: launcher.py
emulator/compiler/: parser.py
emulator/core/: base.py  builtins.py  expressions.py  instructions.py  lvalues.py
emulator/rendering/: renderer.py
emulator/runtime/: architecture.py  interactive.py  runner.py
visualizer/: architecture.py  compiler.py  launcher.py  program.py  renderer.py  runner.py
visualizer/ops/: __init__.py  base.py  instructions.py
